--- a/style.css
+++ b/style.css
@@ -6,8 +6,14 @@
 header {
     background-color: #ee6c4d;
 
-    display: flex;  
-    justify-content: right;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo {
+    color: #98c1d9;
+
+    padding: 14px 16px;
 }
 
 body {
