--- a/styleSignUp.css
+++ b/styleSignUp.css
@@ -4,14 +4,14 @@
 }
 
 header {
-    background-color: #ee6c4d;
+    background-color: white;
 
     display: flex;  
     justify-content: space-between;
 }
 
 .logo {
-    color: #98c1d9;
+    color: teal;
 
     padding: 14px 16px;
 }
@@ -36,7 +36,7 @@ li {
 li a {
     display: block;
 
-    color: #98c1d9;
+    color: rgb(12, 95, 95);
     text-align: center;
     text-decoration: none;
 
@@ -46,21 +46,24 @@ li a {
 li a:hover {
     background-color: #98c1d9;
 
-    color: #ee6c4d;
+    color: rgb(12, 95, 95);
 }
 
 .form-container {
-    display: block;
+    display: flex;
     justify-content: center;
 
-    line-height: 40px;
+    line-height: 80px;
     padding: 120px;
 }
 
 .form {
-    background-color: #ee6c4d;
+    background-color: white;
 
     padding: 20px;
+
+    outline-style: solid;
+    outline-color: black;
 }
 
 .form h2 {
