--- a/styleSignUp.css
+++ b/styleSignUp.css
@@ -36,7 +36,7 @@ li {
 li a {
     display: block;
 
-    color: rgb(12, 95, 95);
+    color: teal;
     text-align: center;
     text-decoration: none;
 
@@ -46,19 +46,21 @@ li a {
 li a:hover {
     background-color: #98c1d9;
 
-    color: rgb(12, 95, 95);
+    color: white;
 }
 
 .form-container {
     display: flex;
     justify-content: center;
 
-    line-height: 80px;
+    line-height: 60px;
     padding: 120px;
 }
 
 .form {
     background-color: white;
+
+    text-align: center;
 
     padding: 20px;
 
@@ -66,6 +68,17 @@ li a:hover {
     outline-color: black;
 }
 
-.form h2 {
-    text-align: center;
+button {
+    background-color: black;
+
+    padding: 10px;
+
+    border: none;
+    border-radius: 16px;
+}
+
+button a {
+    color: white;
+
+    text-decoration: none;
 }
