--- a/styleMyProfile.css
+++ b/styleMyProfile.css
@@ -68,10 +68,11 @@ li a:hover {
 
     padding: 20px;
 
-    
     border-radius: 20px;
 }
 
 .profile img {
+    padding: 20px;
+
     border-radius: 100px;
 }
