--- a/styleFriends.css
+++ b/styleFriends.css
@@ -48,3 +48,31 @@ li a:hover {
 
     color: white;
 }
+
+.page-name {
+    color: white;
+
+    text-align: center;
+
+    margin: 20px;
+}
+
+.friend {
+    display: flex;
+
+    background-color: white;
+
+    margin-right: 25%;
+    margin-left: 25%;
+
+    padding: 20px;
+
+    border-radius: 20px;    
+
+}
+
+.friend img {
+    border-radius: 200px;
+
+    padding: 20px;
+}
