--- a/style.css
+++ b/style.css
@@ -48,3 +48,67 @@ li a:hover {
 
     color: white;
 }
+
+.page-name {
+    color: white;
+
+    text-align: center;
+
+    padding: 20px;
+}
+
+.contents{
+    display: flex;
+
+    justify-content: left;
+    justify-content: space-between;
+
+
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 50px;
+
+    font-size: 24px;
+}
+
+.post1 {
+    background-color: white;
+
+    text-align: center;
+
+    border-radius: 5%;
+}
+
+.post1 ul {
+    padding: 10px;
+
+    line-height: 30px;
+}
+
+.post2 {
+    background-color: white;
+
+    text-align: center;
+
+    border-radius: 5%;
+}
+
+.post2 ul {
+    padding: 10px;
+
+    line-height: 30px;
+}
+
+.post3 {
+    background-color: white;
+
+    text-align: center;
+
+    border-radius: 5%;
+}
+
+.post3 ul {
+    padding: 10px;
+
+    line-height: 30px;
+}
