--- a/styleFriends.css
+++ b/styleFriends.css
@@ -57,6 +57,9 @@ li a:hover {
     margin: 20px;
 }
 
+
+
+
 .friend {
     display: flex;
 
@@ -73,6 +76,25 @@ li a:hover {
 
 .friend img {
     border-radius: 200px;
+
+    padding: 20px;
+}
+
+.friend2 {
+    display: flex;
+
+    background-color: white;
+
+    margin-right: 25%;
+    margin-left: 25%;
+
+    padding: 20px;
+
+    border-radius: 20px;    
+}
+
+.friend2 img {
+    border-radius: 100px;
 
     padding: 20px;
 }
